--- a/import.html
+++ b/import.html
@@ -860,7 +860,7 @@
         stop = false;
         for(i = 0; i <= count; i++){
           if($("#btn-save-" + i).is(":visible")){
-            stop = ture;
+            stop = true;
           }
         }
         if(stop){
