--- a/sale.html
+++ b/sale.html
@@ -226,7 +226,7 @@
           <div class="col-1"></div>
           <div class="col-3 text-right" style="padding-top: 10px;">
             <div class="input-group">
-              <button id="btn_checkbill" class="btn btn-danger" style="text-align: center; margin-right: 50%;" data-toggle="modal" data-target="#myModal" onclick="check()">คิดเงิน</button>
+              <button id="btn_checkbill" class="btn btn-danger" style="text-align: center; margin-right: 50%;" data-toggle="modal" data-target="#myModal" onclick="check_bill()">คิดเงิน</button>
               <button id="print-title" class="btn btn-info" style="text-align: center; margin-right: 5%;" data-toggle="modal" data-target="#printModal">พิมพ์
                 <span>
                   <i class="fa fa-print"></i>
@@ -461,11 +461,12 @@
 
     jsonObj = [];   
     var datetime;
-    var sum = 0;
+    //var sum = 0;
     var sum_dis = 0;
     var cus_id = 0;
     var img;
     var prod_id;
+    var old_price;
     $(document).ready(function(){  
       if(!localStorage.user_id){
         $.alert({
@@ -520,7 +521,8 @@
             return "http://150.95.26.163:8080/gitmew/php/search.php?cus_id="+cus_id;
           },
 
-          getValue: function(element) {            
+          getValue: function(element) {
+            //console.log(element);           
             return element.prod_name;
           },
 
@@ -564,6 +566,7 @@
                 var unit_name = $("#name").getSelectedItemData().unit_name;
                 prod_id = $("#name").getSelectedItemData().prod_id;
                 img = $("#name").getSelectedItemData().img_string;
+                old_price = $("#name").getSelectedItemData()[7].old_price;
 
                 $('#barcode').val(barcode);
                 $('#price').val(price);
@@ -571,7 +574,7 @@
                 $('#total').val(price);
               }
           },
-          requestDelay: 400,          
+          //requestDelay: 400,          
         };
 
         $("#name").easyAutocomplete(options);
@@ -611,9 +614,62 @@
 
               onChooseEvent: function() {
                 cus_id = $("#cus").getSelectedItemData().customer_id;
+                if(jsonObj.length > 0 || $('#barcode').val != ""){
+                  if(jsonObj.length > 0){
+                    var sum_de = 0;
+                    for(var c = 0;c < jsonObj.length; c++){
+                      var arg = c+1;                     
+                      var amt = jsonObj[c].amount;
+                      var prod = jsonObj[c].prod_id;
+                      $.ajax({
+                        url:"http://150.95.26.163:8080/gitmew/php/check_detail_cus.php",
+                        method:"POST",
+                        data:{'cus_id': cus_id,'amt':amt,'prod_id':prod},
+                        async:false,
+                        success:function(data)
+                        {
+                          if(data != "fail"){
+                            var obj = jQuery.parseJSON(data);                          
+                            if(obj != null){
+                              $.each(obj, function(i, field){
+                                if(field.special_prod_price){
+                                  $('#price-'+arg).val(field.special_prod_price);
+                                  $('#total-'+arg).val( $('#price-'+arg).val()*amt);                                
+                                  jsonObj[c].price = field.special_prod_price;
+                                  jsonObj[c].total = $('#total-'+arg).val();
+                                }
+                                if(field.prod_price){                             
+                                  $('#total-'+arg).val(field.prod_price);                                 
+                                  jsonObj[c].total = $('#total-'+arg).val();
+                                  //jsonObj[c].check_amt = 1;
+                                }
+                              });
+                            }else{
+                              if(jsonObj[c].check_amt == 1){
+                                $('#price-'+arg).val(jsonObj[c].price_old);                                                 
+                                jsonObj[c].price = jsonObj[c].price_old;
+                              }else{
+                                $('#price-'+arg).val(jsonObj[c].price_old);
+                                $('#total-'+arg).val($('#price-'+arg).val()*amt );                                                           
+                                jsonObj[c].price = jsonObj[c].price_old;
+                                jsonObj[c].total = $('#total-'+arg).val();
+                              }
+                            }
+                          }                     
+                        }
+                      }); 
+                    sum_de += parseInt(jsonObj[c].total);
+                    }
+                    $('#total-price').val(sum_de);
+                    $('#total-net').val(sum_de-$('#total-discount').val());
+                  }
+                  if($('#barcode').val() != ""){
+                    reset();  
+                  }
+                }
               }
           },
-          requestDelay: 400,          
+          //requestDelay: 400,          
         };
 
         $("#cus").easyAutocomplete(options_cus);
@@ -641,6 +697,7 @@
       });      
     }
 
+    var check = 0;
     function chng_amt(){
       var amt = $('#amount').val();
       $.ajax({
@@ -651,6 +708,29 @@
         success : function(data){
           if(data != "fail"){           
             $('#total').val(data);
+            check = 1;
+          }else{
+            check = 0;
+          }
+        }
+      });
+    }
+
+    function chng_amt_edit(arg){
+      var amt = $('#amount-'+arg).val();
+      var prod = jsonObj[arg-1].prod_id;     
+      $.ajax({
+        type: "POST",
+        url: "http://150.95.26.163:8080/gitmew/php/get_amt_price.php",
+        data: {'prod_id' : prod,
+                'amount' : amt},
+        async:false,
+        success : function(data){
+          if(data != "fail"){           
+            $('#total-'+arg).val(data);
+            jsonObj[arg-1].check_amt = 1;          
+          }else{
+            jsonObj[arg-1].check_amt = 0; 
           }
         }
       });
@@ -672,37 +752,47 @@
     
     var total_old,dis_old;
     function edit(arg){
-      $("#btn_edit"+arg).prop('hidden', true);
-      $("#btn_check" + arg).prop('hidden', false);
-      $("#btn_remove"+arg).prop('hidden', false);
-      $("#amount-" + arg).prop('readonly', false);
-      $("#dis-" + arg).prop('readonly', false);
-      var price = $('#price-'+arg).val();
-      var amt = $("#amount-" + arg).val();
-      var dis = $("#dis-" + arg).val();
-      total_old = price*amt;
-      if(dis == ""){
-        dis_old = 0;
-      }else{
-        dis_old = dis;
+      var stop = false;
+      for(var e = 1; e <= jsonObj.length; e++){
+        if($("#btn_check" + e).is(":visible")){
+          stop = true;
+        }
       }
+      if(stop){
+        return 0;
+      }else{
+        $("#btn_edit"+arg).prop('hidden', true);
+        $("#btn_check" + arg).prop('hidden', false);
+        $("#btn_remove"+arg).prop('hidden', false);
+        $("#amount-" + arg).prop('readonly', false);
+        $("#dis-" + arg).prop('readonly', false);
+        //var price = $('#price-'+arg).val();
+        //var amt = $("#amount-" + arg).val();
+        var dis = $("#dis-" + arg).val();
+        total_old = $("#total-" + arg).val();
+        if(dis == ""){
+          dis_old = 0;
+        }else{
+          dis_old = dis;
+        }
 
-      $('#amount-'+arg).on("keyup input", function(){
-          var price = $('#price-'+arg).val();
-          var amt = $("#amount-" + arg).val();
-          var total = price*amt;
-          $('#total-'+arg).val(total);
-      });
-
+        $('#amount-'+arg).on("keyup input", function(){
+            var price = $('#price-'+arg).val();
+            var amt = $("#amount-" + arg).val();
+            var total = price*amt;
+            $('#total-'+arg).val(total);
+        });
+      }    
     }
 
     function update(arg){
       $("#btn_edit" + arg).prop('hidden', false);
       $("#btn_check" + arg).prop('hidden', true);
       $("#btn_remove" + arg).prop('hidden', true);
-      $("#amount-" + arg).prop('disabled', true);
-      $("#dis-" + arg).prop('disabled', true);
+      $("#amount-" + arg).prop('readonly', true);
+      $("#dis-" + arg).prop('readonly', true);
 
+      var sum = $('#total-price').val();
       var dis = $("#dis-" + arg).val();
       if(dis == ""){
         dis = 0;
@@ -730,9 +820,10 @@
       if(bottom < 200){
         $("#show_list_add").css('max-height', $("#show_list_add").height());
         $("#show_list_add").animate({scrollTop: $('#show_list_add').prop('scrollHeight')});
-      }
+      }      
 
       $("#name").focus();
+      var sum = parseInt($('#total-price').val());
       var barcode = $('#barcode').val();
           if(barcode != "" && $('#name').val() != ""){
             index++;
@@ -755,7 +846,7 @@
                   <input id='price-"+index+"' class='form-control text-center' value='"+ $('#price').val() +"' readonly>\
                 </div>\
                 <div class='col-1' style='padding-left: 10px; padding-right: 0px;'>\
-                  <input id='amount-"+index+"' class='form-control text-center' min='1' value='"+ $('#amount').val() +"' readonly>\
+                  <input id='amount-"+index+"' onchange='chng_amt_edit("+index+")' class='form-control text-center no-spin' min='1' value='"+ $('#amount').val() +"' readonly>\
                 </div>\
                 <div class='col-1'>\
                   <input id='unit-"+index+"' class='form-control text-center' value='"+ $('#unit').val() +"' readonly>\
@@ -799,6 +890,8 @@
             item ["price"] =  $('#price').val();
             item ["amount"] =  $('#amount').val();
             item ["total"] =  $('#total').val();
+            item ["price_old"] =  old_price;
+            item ["check_amt"] =  check;
             if($('#prod-discount').val() != ""){
               item ["discount"] =  $('#prod-discount').val();
             }else{
@@ -867,6 +960,7 @@
         $('#box'+num).prop('checked', false);
         bonus(num);
       }
+      var sum = parseInt($('#total-price').val());
       var h_total = parseInt($('#total-'+num).val());
       var h_dis = parseInt($('#dis-'+num).val());
       sum -= h_total;
@@ -882,26 +976,27 @@
     }
 
     function bonus(num){
-        var h_total = parseInt($('#total-'+num).val());
-        var h_dis = parseInt($('#dis-'+num).val());
+      var sum = parseInt($('#total-price').val());
+      var h_total = parseInt($('#total-'+num).val());
+      var h_dis = parseInt($('#dis-'+num).val());
 
-        if($('#box'+num).is(':checked') == true){
-            sum -= h_total;
-            if(!isNaN(h_dis)){
-              sum_dis -= h_dis;
-            }
-        }else{
-            sum += h_total;
-            if(!isNaN(h_dis)){
-              sum_dis += h_dis;
-            }
-        }
-        $('#total-price').val(sum);
-        $('#total-discount').val(sum_dis);
-        $('#total-net').val(sum - sum_dis);
+      if($('#box'+num).is(':checked') == true){
+          sum -= h_total;
+          if(!isNaN(h_dis)){
+            sum_dis -= h_dis;
+          }
+      }else{
+          sum += h_total;
+          if(!isNaN(h_dis)){
+            sum_dis += h_dis;
+          }
+      }
+      $('#total-price').val(sum);
+      $('#total-discount').val(sum_dis);
+      $('#total-net').val(sum - sum_dis);
     }
 
-    function check(){     
+    function check_bill(){     
       var total = $('#total-price').val();
       var dis = $('#total-discount').val();
       var net = $('#total-net').val();
