--- a/cash_record.html
+++ b/cash_record.html
@@ -37,6 +37,14 @@
     <script>
         var datetime
         $(document).ready(function () {
+            if(!localStorage.user_id){
+                $.alert({
+                icon: 'fa fa-warning',
+                title: 'เตือน',
+                content: "กรุณาเข้าสู่ระบบก่อน"
+                });
+                window.location = "login.html";
+            }   
             $.ajax({
                 url:"http://150.95.26.163:8080/gitmew/php/get_branch.php",
                 method:"GET",
