--- a/manage_prod.html
+++ b/manage_prod.html
@@ -43,6 +43,23 @@
   <script>
     var max_page_no = 0;
     $(document).ready(function() {
+      if(!localStorage.user_id){
+          $.alert({
+          icon: 'fa fa-warning',
+          title: 'เตือน',
+          content: "กรุณาเข้าสู่ระบบก่อน"
+          });
+          window.location = "login.html";
+      }   
+
+      if(localStorage.role == "user"){
+          $.alert({
+              icon: 'fa fa-warning',
+              title: 'เตือน',
+              content: 'ไม่อนุญาติสำหรับบุคคลทั่วไป',
+          });
+          window.history.back();
+      }          
       // Get max
       var path = "http://150.95.26.163:8080/gitmew/php/get_max.php";
       $.post(path, {
