--- a/sale.html
+++ b/sale.html
@@ -179,7 +179,7 @@
                   <input id="price" type="number" class="form-control text-center no-spin" readonly>
                 </div>
                 <div class="col-1" style='padding-left: 10px; padding-right: 0px;'>
-                  <input id="amount" type="number" min="1" value="1" class="form-control text-center no-spin" onchange="chng_amt()" data-index="3">
+                  <input id="amount" type="number" min="1" value="1" class="form-control text-center no-spin" oninput ="chng_amt()" data-index="3">
                 </div>
                 <div class="col-1">
                   <input id="unit" type="text" class="form-control text-center" readonly>
@@ -415,12 +415,12 @@
           }            
       });      
 
-      $('#amount').on("keyup input", function(){
+      /*$('#amount').on("keyup input", function(){
           var price = $('#price').val();
           var amount = $('#amount').val();
           var total = price*amount;
           $('#total').val(total);
-      });
+      });*/
 
       $('#discount-money').on("keyup input", function(){
         var sum = $('#net-price').val();
@@ -466,7 +466,7 @@
     var cus_id = 0;
     var img;
     var prod_id;
-    var old_price;
+    var old_price,price;
     $(document).ready(function(){  
       if(!localStorage.user_id){
         $.alert({
@@ -562,7 +562,7 @@
 
               onChooseEvent: function() {
                 var barcode = $("#name").getSelectedItemData().barcode;
-                var price = $("#name").getSelectedItemData().prod_price;
+                price = $("#name").getSelectedItemData().prod_price;
                 var unit_name = $("#name").getSelectedItemData().unit_name;
                 prod_id = $("#name").getSelectedItemData().prod_id;
                 img = $("#name").getSelectedItemData().img_string;
@@ -629,7 +629,8 @@
                         success:function(data)
                         {
                           if(data != "fail"){
-                            var obj = jQuery.parseJSON(data);                          
+                            var obj = jQuery.parseJSON(data);
+                            console.log(obj);                          
                             if(obj != null){
                               $.each(obj, function(i, field){
                                 if(field.special_prod_price){
@@ -637,23 +638,22 @@
                                   $('#total-'+arg).val( $('#price-'+arg).val()*amt);                                
                                   jsonObj[c].price = field.special_prod_price;
                                   jsonObj[c].total = $('#total-'+arg).val();
+                                  jsonObj[c].price_cus = field.special_prod_price;
                                 }
                                 if(field.prod_price){                             
-                                  $('#total-'+arg).val(field.prod_price);                                 
-                                  jsonObj[c].total = $('#total-'+arg).val();
-                                  //jsonObj[c].check_amt = 1;
+                                  $('#price-'+arg).val(field.prod_price);
+                                  $('#total-'+arg).val( $('#price-'+arg).val()*amt);                                
+                                  jsonObj[c].price = field.prod_price;
+                                  jsonObj[c].total = $('#total-'+arg).val();                             
                                 }
                               });
                             }else{
-                              if(jsonObj[c].check_amt == 1){
-                                $('#price-'+arg).val(jsonObj[c].price_old);                                                 
-                                jsonObj[c].price = jsonObj[c].price_old;
-                              }else{
+                              if(jsonObj[c].check_amt == 0){
                                 $('#price-'+arg).val(jsonObj[c].price_old);
-                                $('#total-'+arg).val($('#price-'+arg).val()*amt );                                                           
+                                $('#total-'+arg).val( $('#price-'+arg).val()*amt);                                
                                 jsonObj[c].price = jsonObj[c].price_old;
-                                jsonObj[c].total = $('#total-'+arg).val();
-                              }
+                                jsonObj[c].total = $('#total-'+arg).val();       
+                              }                              
                             }
                           }                     
                         }
@@ -705,11 +705,19 @@
         url: "http://150.95.26.163:8080/gitmew/php/get_amt_price.php",
         data: {'prod_id' : prod_id,
                 'amount' : amt},
-        success : function(data){
+        //async:false,
+        success : function(data){        
           if(data != "fail"){           
-            $('#total').val(data);
+            $('#price').val(data);
+            $('#total').val($('#price').val()*amt);
             check = 1;
           }else{
+            if(old_price != price){
+              $('#price').val(price);
+            }else{
+              $('#price').val(old_price);
+            }          
+            $('#total').val($('#price').val()*amt);
             check = 0;
           }
         }
@@ -724,12 +732,19 @@
         url: "http://150.95.26.163:8080/gitmew/php/get_amt_price.php",
         data: {'prod_id' : prod,
                 'amount' : amt},
-        async:false,
+        //async:false,
         success : function(data){
           if(data != "fail"){           
-            $('#total-'+arg).val(data);
+            $('#price-'+arg).val(data);
+            $('#total-'+arg).val($('#price-'+arg).val()*amt);
             jsonObj[arg-1].check_amt = 1;          
           }else{
+            if(jsonObj[arg-1].price_old != jsonObj[arg-1].price_cus){
+              $('#price-'+arg).val(jsonObj[arg-1].price_cus);
+            }else{
+              $('#price-'+arg).val(jsonObj[arg-1].price_old);
+            }          
+            $('#total-'+arg).val($('#price-'+arg).val()*amt);
             jsonObj[arg-1].check_amt = 0; 
           }
         }
@@ -776,12 +791,12 @@
           dis_old = dis;
         }
 
-        $('#amount-'+arg).on("keyup input", function(){
+        /*$('#amount-'+arg).on("keyup input", function(){
             var price = $('#price-'+arg).val();
             var amt = $("#amount-" + arg).val();
             var total = price*amt;
             $('#total-'+arg).val(total);
-        });
+        });*/
       }    
     }
 
@@ -846,7 +861,7 @@
                   <input id='price-"+index+"' class='form-control text-center' value='"+ $('#price').val() +"' readonly>\
                 </div>\
                 <div class='col-1' style='padding-left: 10px; padding-right: 0px;'>\
-                  <input id='amount-"+index+"' onchange='chng_amt_edit("+index+")' class='form-control text-center no-spin' min='1' value='"+ $('#amount').val() +"' readonly>\
+                  <input id='amount-"+index+"' oninput='chng_amt_edit("+index+")' class='form-control text-center no-spin' min='1' value='"+ $('#amount').val() +"' readonly>\
                 </div>\
                 <div class='col-1'>\
                   <input id='unit-"+index+"' class='form-control text-center' value='"+ $('#unit').val() +"' readonly>\
@@ -891,6 +906,7 @@
             item ["amount"] =  $('#amount').val();
             item ["total"] =  $('#total').val();
             item ["price_old"] =  old_price;
+            item["price_cus"] = price;
             item ["check_amt"] =  check;
             if($('#prod-discount').val() != ""){
               item ["discount"] =  $('#prod-discount').val();
